--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             padding: 0;
             box-sizing: border-box;
         }
-        :root{
+        html{
             --button-height:32px;
             --font-size:14px;
             --button-bg:white;
@@ -30,39 +30,12 @@
         }
 
     </style>
-    <style>
-        .w-button{
-            font-size: var(--font-size);
-            height: var(--button-height);
-            padding: 0 1em;
-            border-radius: var(--border-radius);
-            border: 1px solid var(--border-color);
-            background-color: var(--button-bg);
-        }
-        .w-button:hover{
-            border-color: var(--border-color-hover);
-        }
-        .w-button:active{
-            background-color: var(--button-active-bg);
-        }
-        .w-button:focus{
-            outline: none;
-        }
-
-    </style>
 </head>
 <body>
 <div id="app">
     <w-button></w-button>
 </div>
-<script src="node_modules/vue/dist/vue.min.js"></script>
-<script src="button.js"></script>
-<script>
+<script src="./src/app.js"></script>
 
-    new Vue({
-        el:"#app",
-        data:{msg:'hi'}
-    })
-</script>
 </body>
 </html>
