--- a/index.html
+++ b/index.html
@@ -7,35 +7,47 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>vue wheels</title>
     <style>
-        *{
+        * {
             margin: 0;
             padding: 0;
             box-sizing: border-box;
         }
-        html{
-            --button-height:32px;
-            --font-size:14px;
-            --button-bg:white;
-            --button-active-bg:#eee;
-            --border-radius:4px;
-            --color:#333;
-            --border-color:#999;
-            --border-color-hover:#666;
+
+        html {
+            --button-height: 32px;
+            --font-size: 14px;
+            --button-bg: white;
+            --button-active-bg: #eee;
+            --border-radius: 4px;
+            --color: #333;
+            --border-color: #999;
+            --border-color-hover: #666;
         }
-        body{
+
+        body {
             font-size: var(--font-size);
         }
-        #app{
+
+        #app {
             margin: 20px;
         }
 
     </style>
+    <style>
+        .icon {
+            width: 1em;
+            height: 1em;
+        }
+    </style>
 </head>
 <body>
 <div id="app">
-    <w-button></w-button>
+    <w-button icon="settings">点击</w-button>
+    <w-button icon="settings" icon-position="left">点击</w-button>
+    <w-button icon="settings" icon-position="right">点击</w-button>
 </div>
 <script src="./src/app.js"></script>
+<script src="//at.alicdn.com/t/font_2011996_yux1dem6tga.js"></script>
 
 </body>
 </html>
