--- a/index.html
+++ b/index.html
@@ -33,18 +33,13 @@
         }
 
     </style>
-    <style>
-        .icon {
-            width: 1em;
-            height: 1em;
-        }
-    </style>
 </head>
 <body>
 <div id="app">
     <w-button icon="settings">点击</w-button>
     <w-button icon="settings" icon-position="left">点击</w-button>
     <w-button icon="settings" icon-position="right">点击</w-button>
+    <w-icon name="download"></w-icon>
 </div>
 <script src="./src/app.js"></script>
 <script src="//at.alicdn.com/t/font_2011996_yux1dem6tga.js"></script>
